Fix Sonar smells