@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 
@@ -16,21 +15,15 @@ public class Commons {
       return new ArrayList<>();
     }
 
-    return list.stream()
-        .map(function)
-        .collect(Collectors.toList());
+    return list.stream().map(function).toList();
   }
 
   public static <T, U, R> List<R> forEach(
-      final List<T> list,
-      final U parameter,
-      final BiFunction<T, U, R> function) {
+      final List<T> list, final U parameter, final BiFunction<T, U, R> function) {
     if (list == null) {
       return new ArrayList<>();
     }
 
-    return list.stream()
-        .map(item -> function.apply(item, parameter))
-        .collect(Collectors.toList());
+    return list.stream().map(item -> function.apply(item, parameter)).toList();
   }
 }
